Dynegy/src/objects/AccountBillDeterminate__c.object
<CustomObject>
    <description>An object describing an attribute that must be necessary to be stored for billing purposes.  Typically Sent to LodeStar for processing.</description>
    <fields>
        <fullName>Contract_LDC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract LDC</label>
        <referenceTo>Contract_LDC__c</referenceTo>
        <relationshipLabel>Account Bill Determinates</relationshipLabel>
        <relationshipName>Account_Bill_Determinates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Determinate_Value__c</fullName>
        <description>The Value of the Entry - typically a number, but can be any data type.</description>
        <inlineHelpText>The Value of the Entry - typically a number, but can be any data type.</inlineHelpText>
        <label>Determinate Value</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <description>The LDC Account this billing determinate is related to.</description>
        <inlineHelpText>The LDC Account this billing determinate is related to.</inlineHelpText>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Account Bill Determinates</relationshipLabel>
        <relationshipName>AccountBillDeterminates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>The Date/Time that the billing determinate will start to apply.</description>
        <inlineHelpText>The Date/Time that the billing determinate will start to apply.</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StopDateTime__c</fullName>
        <description>The Date/Time that this billing determinate will stop being applied to the LDC Account for billing.</description>
        <inlineHelpText>The Date/Time that this billing determinate will stop being applied to the LDC Account for billing.</inlineHelpText>
        <label>Stop Date/Time</label>
        <type>DateTime</type>
    </fields>
    <label>Account Bill Determinate</label>
    <nameField>
        <displayFormat>BD-{000000}</displayFormat>
        <label>Determinate Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Bill Determinates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>